# poc-agent-devops

./: .gitignore  CLAUDE.md  sonar-project.properties
.claude/commands/: add-tests.md  create-endpoint.md
.github/: trigger
.github/workflows/: ci.yml
memory/: poc-conformance-gate.md  poc-vision-general.md
policy/: conformity-policy.yaml
services/rust-svc/: Cargo.toml  Dockerfile  sonar-project.properties
services/rust-svc-bad/: Cargo.toml  Dockerfile  sonar-project.properties
services/rust-svc-bad/src/: main.rs
services/rust-svc-bad/src/routes/: news.rs
services/rust-svc/src/: error.rs  main.rs  state.rs
services/rust-svc/src/domain/: news.rs
services/rust-svc/src/routes/: health.rs  mod.rs  news.rs  openapi.rs  stats.rs
