[package]
name = "rust-svc-bad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-svc-bad"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }
