[package]
name = "rust-svc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-svc"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.1"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
axum-test = "20"
tokio = { version = "1", features = ["full"] }
